# agent-squad

./: .env.example  .env.mcp.example  .gitignore  .prettierignore  AGENT_INTERACTION_PATTERNS_PLAN.md  AGENT_TESTS_PROGRESS.md  AGNO_ARCHITECTURE_GUIDE.md  ANALYTICS_FEATURE_COMPLETE.md  ASYNC_MIGRATION_COMPLETE.md  BATTLE_TEST_REPORT.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SUMMARY.md  COVERAGE_95_PERCENT_ROADMAP.md  COVERAGE_ACHIEVEMENT_REPORT.md  COVERAGE_IMPROVEMENT_PLAN.md  DEMOS.md  DEMO_READY.md  DOCUMENTATION_INDEX.md  E2B_INTEGRATION_COMPLETE.md  E2B_INTEGRATION_SUMMARY.md  E2B_INTEGRATION_TESTING_GUIDE.md  E2B_QUICK_TEST_CHECKLIST.md  E2E_AI_CONVERSATION_IMPLEMENTATION_PLAN.md  EXPAND_AGENT_ROLES_TODOS.md  FINAL_COVERAGE_SUMMARY.md  FINAL_SETUP_STATUS.md  FRONTEND_ASSESSMENT_AND_PLAN.md  FRONTEND_FULL_BUILD_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  INNGEST_IMPLEMENTATION.md  LEGACY_CODE_REMOVAL_PLAN.md  MULTI_TURN_CONVERSATION_DEMO_RESULTS.md  NATS_QUICK_START.md  OLLAMA_SETUP_GUIDE.md  OPTIMIZATION_STATUS.md  OPTIMIZATION_SUMMARY.md  PATH_TO_PERFECT_10.md  PHASE_1_DEMO_RESULTS.md  (+81 more)
backend/: .env.example  ASYNC_DATABASE_GUIDE.md  COMPLETE_TEST_GENERATION_SUMMARY.md  DATABASE_GUIDE.md  Dockerfile  README.md  TEST_GENERATION_SUMMARY.md  UV_GUIDE.md  coverage.xml  generate_all_remaining_tests.py  generate_all_tests.sh  generate_missing_tests.py  main.py  pyproject.toml  pytest.ini  requirements.txt  security_audit_bandit.txt
backend/agents/: CLAUDE.md  agno_base.py  agno_poc.py  base_agent.py  factory.py
backend/alembic/: env.py
backend/cli/: README.md  __init__.py  apply_template.py  create_demo_squad.py  demo.py  run_demo_task.py  stream_agent_messages.py  view_cache_metrics.py
backend/core/: CLAUDE.md  agno_config.py  app.py  auth.py  config.py  database.py  inngest.py  logging.py  redis.py  secrets_manager.py  security.py
backend/integrations/: confluence_service.py  git_integration.py  git_service.py  github_service.py  jira_service.py
backend/middleware/: __init__.py  error_tracking.py  input_validation.py  rate_limiting.py  request_logging.py  security_headers.py
backend/models/: __init__.py  agent_message.py  analytics.py  approval_request.py  base.py  billing.py  branching.py  conversation.py  feedback.py  guardian.py  integration.py  llm_cost_tracking.py  message.py  multi_turn_conversation.py  project.py  routing_rule.py  sandbox.py  squad.py  squad_member_stats.py  squad_template.py  task_execution.py  user.py  workflow.py
backend/monitoring/: prometheus_metrics.py
backend/prisma/: schema.prisma
backend/schemas/: __init__.py  agent_message.py  analytics.py  auth.py  branching.py  conversation.py  intelligence.py  mcp.py  ml.py  multi_turn_conversation.py  routing_rule.py  sandbox_events.py  squad.py  squad_member.py  task_execution.py  template.py  webhook_events.py  workflow.py
backend/scripts/: setup-atlassian.sh  verify-setup.sh
backend/services/: CLAUDE.md  __init__.py  agent_mcp_service.py  agent_pool.py  agent_service.py  analytics_service.py  auth_service.py  cache_metrics.py  cache_service.py  conversation_service.py  llm_cache_service.py  sandbox_service.py  squad_analytics_service.py  squad_service.py  sse_service.py  task_execution_service.py  task_monitoring.py  template_service.py  webhook_service.py
backend/tests/: CLAUDE.md  README.md  conftest.py  test_auth_endpoints.py  test_confluence_service.py  test_database_stress.py  test_e2b_integration_e2e.py  test_git_service.py  test_github_service.py  test_jira_service.py  test_sandbox_battle.py  test_sandbox_sse.py  test_security.py  test_sse_stress.py  test_webhook_battle.py
backend/workers/: __init__.py  inngest_worker.py  nats_consumer.py
docs/: README.md  (+30 more)
(+559 files in other folders)
