[tool.poetry]
name = "agent-squad-backend"
version = "0.1.0"
description = "Agent Squad - AI-Powered Software Development SaaS Backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-dotenv = "^1.0.0"
prisma = "^0.11.0"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
stripe = "^7.4.0"
openai = "^1.3.7"
anthropic = "^0.7.7"
pinecone-client = "^2.2.4"
inngest = "^0.3.2"
httpx = "^0.25.2"
aiohttp = "^3.9.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"
python-slugify = "^8.0.1"
pytz = "^2023.3"
redis = "^5.0.1"
celery = "^5.3.4"
structlog = "^23.2.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
faker = "^20.1.0"
black = "^23.12.0"
ruff = "^0.1.7"
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
